--- a/drops/styles.css
+++ b/drops/styles.css
@@ -1,10 +1,20 @@
 body {
-    background-color: #000000;
-    color: #fff;
-    background: url('bg.gif') center;
-    font-family: Arial, sans-serif;
+    background-color: #613540;
+    color: #613540;
+    background: url('../refs/img/bg205.gif') center;
+    font-family: "Perfect DOS VGA 437", "Zpix (最像素)", sans-serif;
     margin: 0;
     padding: 0;
+}
+
+@font-face {
+    font-family: "Perfect DOS VGA 437";
+    src: url('VGA.ttf');
+}
+
+@font-face {
+    font-family: "Zpix (最像素)";
+    src: url('zpix.ttf');
 }
 
 header {
@@ -24,7 +34,7 @@ header {
 
 nav a {
     margin: 0 10px;
-    color: #fff;
+    color: #613540;
     text-decoration: none;
 }
 
