--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,177 @@
 * {
-    cursor: url(https://cur.cursors-4u.net/nature/nat-4/nat354.ani),
-        url(../img/cursor.gif), default !important;
-    cursor: url(https://cur.cursors-4u.net/nature/nat-4/nat354.ani),
-        url(../img/cursor2.gif), auto;
-}
-
-body,
-html {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #000;
+    color: #fff;
+    font-family: "Perfect DOS VGA 437", "Zpix (最像素)", sans-serif;
+    position: relative;
+    overflow: hidden;
+}
+
+#background-video {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 100%;
-    background: url('bg205.gif') center;
-    background-color: black;
-    font-family: 'Arial', sans-serif;
+    object-fit: cover;
+    z-index: -1;
+}
+
+
+@font-face {
+    font-family: "Perfect DOS VGA 437";
+    src: url('../VGA.ttf');
+}
+
+@font-face {
+    font-family: "Zpix (最像素)";
+    src: url('../zpix.ttf');
 }
 
 .container {
+    text-align: center;
     position: relative;
-    height: 100vh;
-    overflow: hidden;
 }
+
+h1 {
+    font-size: 4rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+    animation: flicker 0.15s infinite;
+}
+
+@keyframes flicker {
+    0% {
+        opacity: 0.27861;
+    }
+
+    5% {
+        opacity: 0.34769;
+    }
+
+    10% {
+        opacity: 0.23604;
+    }
+
+    15% {
+        opacity: 0.90626;
+    }
+
+    20% {
+        opacity: 0.18128;
+    }
+
+    25% {
+        opacity: 0.83891;
+    }
+
+    30% {
+        opacity: 0.65583;
+    }
+
+    35% {
+        opacity: 0.67807;
+    }
+
+    40% {
+        opacity: 0.26559;
+    }
+
+    45% {
+        opacity: 0.84693;
+    }
+
+    50% {
+        opacity: 0.96019;
+    }
+
+    55% {
+        opacity: 0.08594;
+    }
+
+    60% {
+        opacity: 0.20313;
+    }
+
+    65% {
+        opacity: 0.71988;
+    }
+
+    70% {
+        opacity: 0.53455;
+    }
+
+    75% {
+        opacity: 0.37288;
+    }
+
+    80% {
+        opacity: 0.71428;
+    }
+
+    85% {
+        opacity: 0.70419;
+    }
+
+    90% {
+        opacity: 0.7003;
+    }
+
+    95% {
+        opacity: 0.36108;
+    }
+
+    100% {
+        opacity: 0.24387;
+    }
+}
+
+p {
+    font-size: 1.2rem;
+    color: #bbb;
+}
+
+.typewriter-container {
+    display: inline-block;
+    width: 300px;
+    height: 1.2em;
+    text-align: center;
+}
+
+
+.typewriter-text {
+    display: inline-block;
+    overflow: hidden;
+    border-right: 0.15em solid #fff;
+    white-space: nowrap;
+    animation: typing 3s steps(30, end), blink-caret 0.75s step-end infinite;
+}
+
+@keyframes typing {
+    from {
+        width: 0;
+    }
+
+    to {
+        width: 100%;
+    }
+}
+
+@keyframes blink-caret {
+    50% {
+        border-color: transparent;
+    }
+}
+
 
 .overlay {
     position: fixed;
@@ -27,195 +179,166 @@ html {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 3;
-    opacity: 1;
+    background: rgba(0, 0, 0, 1);
     display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
-    font-size: 18px;
+    color: #fff;
+    font-family: "Perfect DOS VGA 437", "Zpix (最像素)", sans-serif;
+    font-size: 2rem;
+    z-index: 10000;
     cursor: pointer;
-    transition: opacity 1s ease-in-out;
 }
 
-.enter-button {
-    cursor: pointer;
-    transition: opacity 0.5s ease-in-out;
-    z-index: 4;
-}
-
-.enter-button:hover {
-    opacity: 0.7;
-}
-
-.content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.overlay-text {
     text-align: center;
-    color: white;
-    z-index: 2;
+    z-index: 10100;
+}
+
+.fade-out {
     opacity: 0;
-    transition: opacity 1s ease-in-out;
-    min-height: 200px; /* Set a minimum height for the container */
+    transition: opacity 2s ease-out;
 }
 
-.logo {
-    width: 50%;
-    height: auto;
-    pointer-events: none;
-    z-index: 1;
+@-webkit-keyframes snowflakes-fall {
+    0% {
+        top: -10%;
+    }
+
+    100% {
+        top: 100%;
+    }
 }
 
-.content button {
-    font-size: 18px;
-    padding: 10px 30px;
-    border: 2px solid #944256;
-    color: #a7a7a7;
-    background: none;
-    position: relative;
-    overflow: hidden;
-    z-index: 4;
-    border-radius: 15px;
-    height: 50px;
-    animation: glitchFade 5s infinite linear alternate-reverse;
-}
-
-.content .spacer {
-    height: 20px;
-}
-
-@keyframes glitchFade {
+@-webkit-keyframes snowflakes-shake {
 
     0%,
     100% {
-        color: #613540;
-        opacity: 0.5;
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
     }
 
-    10%,
-    30%,
-    50%,
-    70%,
-    90% {
-        color: #97475b;
-        opacity: 1;
-    }
-
-    20%,
-    40%,
-    60%,
-    80% {
-        color: #5f1c2e;
-        opacity: 0.5;
+    50% {
+        -webkit-transform: translateX(80px);
+        transform: translateX(80px);
     }
 }
 
-.content h1 {
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    animation: flash 0.01s infinite alternate, swing 1s infinite;
-    color: #613540;
+@keyframes snowflakes-fall {
+    0% {
+        top: -10%;
+    }
+
+    100% {
+        top: 100%;
+    }
 }
 
-#ent {
-    animation: flash 0.01s infinite alternate;
-}
-
-#clock {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 20px;
-    animation: flash 0.01s infinite alternate;
-}
-
-@keyframes flash {
+@keyframes snowflakes-shake {
 
     0%,
     100% {
-        color: #613540;
+        transform: translateX(0);
     }
 
     50% {
-        color: #a1586b;
+        transform: translateX(80px);
     }
 }
 
-@keyframes fadeOut {
-    from {
-        opacity: 0.7;
-    }
-
-    to {
-        opacity: 0;
-    }
-}
-
-.typing-text {
-    font-size: 36px;
-    margin-bottom: 20px;
-    animation: glow 1s ease-in-out infinite alternate, 
-    flash 0.01s infinite alternate, 
-    swing 1s infinite
-}
-
-@keyframes glow {
-    from {
-        text-shadow: 0 0 10px #a1586b
-    }
-
-    to {
-        text-shadow: 0 0 20px #613540
-    }
-}
-
-
-@keyframes swing {
-    0% {
-        transform: rotate3d(0, 0, 1, 3deg);
-    }
-
-    50% {
-        transform: rotate3d(0, 0, 1, -3deg);
-    }
-
-    100% {
-        transform: rotate3d(0, 0, 1, 3deg);
-    }
-}
-
-@keyframes bloodSpark {
-    0% {
-        transform: translateY(100%) translateX(0);
-        opacity: 0.7;
-    }
-
-    100% {
-        transform: translateY(-50vh) translateX(50vw);
-        opacity: 0.7;
-    }
-}
-
-.blood-spark {
+.snowflake {
+    color: rgb(255, 255, 255);
+    font-family: "Perfect DOS VGA 437", "Zpix (最像素)", sans-serif;
+    text-shadow: 0 0 5px #000;
+    font-size: 1em;
     position: fixed;
-    width: 6px;
-    height: 6px;
-    background-color: #613540;
-    border-radius: 50%;
-    animation: bloodSpark 4s linear forwards, fadeOut 1s ease-in-out 2s forwards;
-    opacity: 0.7;
+    top: -10%;
+    z-index: 9999;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: default;
+    -webkit-animation-name: snowflakes-fall, snowflakes-shake;
+    -webkit-animation-duration: 10s, 3s;
+    -webkit-animation-timing-function: linear, ease-in-out;
+    -webkit-animation-iteration-count: infinite, infinite;
+    -webkit-animation-play-state: running, running;
+    animation-name: snowflakes-fall, snowflakes-shake;
+    animation-duration: 10s, 3s;
+    animation-timing-function: linear, ease-in-out;
+    animation-iteration-count: infinite, infinite;
+    animation-play-state: running, running;
 }
 
-@keyframes fadeOut {
-    from {
-        opacity: 0.7;
-    }
+.snowflake:nth-of-type(0) {
+    left: 1%;
+    -webkit-animation-delay: 0s, 0s;
+    animation-delay: 0s, 0s;
+}
 
-    to {
-        opacity: 0;
-    }
+.snowflake:nth-of-type(1) {
+    left: 10%;
+    -webkit-animation-delay: 1s, 1s;
+    animation-delay: 1s, 1s;
+}
+
+.snowflake:nth-of-type(2) {
+    left: 20%;
+    -webkit-animation-delay: 6s, 0.5s;
+    animation-delay: 6s, 0.5s;
+}
+
+.snowflake:nth-of-type(3) {
+    left: 30%;
+    -webkit-animation-delay: 4s, 2s;
+    animation-delay: 4s, 2s;
+}
+
+.snowflake:nth-of-type(4) {
+    left: 40%;
+    -webkit-animation-delay: 2s, 2s;
+    animation-delay: 2s, 2s;
+}
+
+.snowflake:nth-of-type(5) {
+    left: 50%;
+    -webkit-animation-delay: 8s, 3s;
+    animation-delay: 8s, 3s;
+}
+
+.snowflake:nth-of-type(6) {
+    left: 60%;
+    -webkit-animation-delay: 6s, 2s;
+    animation-delay: 6s, 2s;
+}
+
+.snowflake:nth-of-type(7) {
+    left: 70%;
+    -webkit-animation-delay: 2.5s, 1s;
+    animation-delay: 2.5s, 1s;
+}
+
+.snowflake:nth-of-type(8) {
+    left: 80%;
+    -webkit-animation-delay: 1s, 0s;
+    animation-delay: 1s, 0s;
+}
+
+.snowflake:nth-of-type(9) {
+    left: 90%;
+    -webkit-animation-delay: 3s, 1.5s;
+    animation-delay: 3s, 1.5s;
+}
+
+.snowflake:nth-of-type(10) {
+    left: 25%;
+    -webkit-animation-delay: 2s, 0s;
+    animation-delay: 2s, 0s;
+}
+
+.snowflake:nth-of-type(11) {
+    left: 65%;
+    -webkit-animation-delay: 4s, 2.5s;
+    animation-delay: 4s, 2.5s;
 }
